Bug 41739 - [4.5 Regression] Failed to bootstrap on Linux/ia64
Summary: [4.5 Regression] Failed to bootstrap on Linux/ia64
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: debug (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: 4.5.0
Assignee: Alexandre Oliva
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-17 17:19 UTC by H.J. Lu
Modified: 2009-10-21 00:52 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2009-10-19 15:34:02


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2009-10-17 17:19:50 UTC
Revision 152933 gave:

/export/gnu/import/svn/gcc-test/bld/./prev-gcc/xgcc -B/export/gnu/import/svn/gcc-test/bld/./prev-gcc/ -B/usr/local/ia64-unknown-linux-gnu/bin/ -B/usr/local/ia64-unknown-linux-gnu/bin/ -B/usr/local/ia64-unknown-linux-gnu/lib/ -isystem /usr/local/ia64-unknown-linux-gnu/include -isystem /usr/local/ia64-unknown-linux-gnu/sys-include    -c  -DUSE_LIBUNWIND_EXCEPTIONS -g -O2 -DIN_GCC   -W -Wall -Wwrite-strings -Wcast-qual -Wstrict-prototypes -Wmissing-prototypes -Wmissing-format-attribute -pedantic -Wno-long-long -Wno-variadic-macros -Wno-overlength-strings -Werror -Wold-style-definition -Wc++-compat -fno-common  -DHAVE_CONFIG_H -I. -I. -I../../src-trunk/gcc -I../../src-trunk/gcc/. -I../../src-trunk/gcc/../include -I../../src-trunk/gcc/../libcpp/include  -I../../src-trunk/gcc/../libdecnumber -I../../src-trunk/gcc/../libdecnumber/dpd -I../libdecnumber   -I/usr/include/libelf  ../../src-trunk/gcc/function.c -o function.o
../../src-trunk/gcc/function.c: In function 'expand_function_end':
../../src-trunk/gcc/function.c:4862:1: internal compiler error: in ds_merge_1, at sched-deps.c:3845
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.
make[6]: *** [function.o] Error 1

Revision 152923 is OK. It may be caused by revision 152927:

http://gcc.gnu.org/ml/gcc-cvs/2009-10/msg00580.html
Comment 1 Alexandre Oliva 2009-10-18 19:04:59 UTC
Thanks, it is most certainly the patch I installed.  On it.
Comment 2 Jakub Jelinek 2009-10-20 15:09:57 UTC
Subject: Bug 41739

Author: jakub
Date: Tue Oct 20 15:09:43 2009
New Revision: 153017

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=153017
Log:
	PR debug/41739
	* haifa-sched.c (try_ready): Skip debug deps updating speculation
	status.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/haifa-sched.c

Comment 3 H.J. Lu 2009-10-21 00:52:23 UTC
Fixed.