re PR debug/41739 (Failed to bootstrap on Linux/ia64)

PR debug/41739
	* haifa-sched.c (try_ready): Skip debug deps updating speculation
	status.

From-SVN: r153017